tests/custom/issues/431/stderr.expected
Error:
    431.essence:2:14:
unexpected {
expecting ( or of
    find s : set {x,y}
                 ^
